# glmixer-mirror

./: .directory  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  FindBZip2.cmake  FindGLEW.cmake  FindOpenCV.cmake  FindZLIB.cmake  Findavcodec.cmake  Findavcore.cmake  Findavformat.cmake  Findavutil.cmake  Findfaac.cmake  Findfaad.cmake  Findmatroska.cmake  Findmp3lame.cmake  Findopenjpeg.cmake  Findpostproc.cmake  Findswscale.cmake  Findvorbis.cmake  GLMixer.files  GLMixer.includes  README.txt  icons.qrc  images.qrc  macros.cmake  opengl.qrc  textures.qrc
.github/workflows/: mirror.yml
FreeFramePlugins/: CMakeLists.txt  plugins_linux.qrc.in  plugins_osx.qrc.in  plugins_win32.qrc.in
FreeFramePlugins/ExtremelySimpleCaptureFFGLPlugin/: CMakeLists.txt  escapi.cpp  escapiFFGL.cpp  escapiFFGL.def  escapiFFGL.h
FreeFramePlugins/FreeFrameBlurPlugin/: CMakeLists.txt  FreeFrameBlur.cpp  FreeFrameBlur.h
FreeFramePlugins/FreeFrameClockPlugin/: CMakeLists.txt  FreeFrameClock.cpp  FreeFrameClock.h
FreeFramePlugins/FreeFrameDelayPlugin/: CMakeLists.txt  FreeFrameDelay.cpp  FreeFrameDelay.def  FreeFrameDelay.h
FreeFramePlugins/FreeFrameDitheringPlugin/: CMakeLists.txt  FreeFrameDithering.cpp  FreeFrameDithering.h
FreeFramePlugins/FreeFrameFFPlayPlugin/: CMakeLists.txt  FreeFrameFFPlay.cpp  FreeFrameFFPlay.h  ffplay.c
FreeFramePlugins/FreeFrameFragmentCodePlugin/: CMakeLists.txt  FreeFrameFragmentCodePlugin.cpp  FreeFrameFragmentCodePlugin.h  FreeFrameShadertoyEffect.cpp  FreeFrameShadertoySource.cpp
FreeFramePlugins/FreeFrameFreiChenPlugin/: CMakeLists.txt  FreeFrameFreiChen.cpp  FreeFrameFreiChen.h
FreeFramePlugins/FreeFrameGlowPlugin/: CMakeLists.txt  FreeFrameGlow.cpp  FreeFrameGlow.h
FreeFramePlugins/FreeFrameGridPlugin/: CMakeLists.txt  FreeFrameGrid.cpp  FreeFrameGrid.h
FreeFramePlugins/FreeFrameKuwaharaPlugin/: CMakeLists.txt  FreeFrameKuwahara.cpp  FreeFrameKuwahara.h
FreeFramePlugins/FreeFrameMirePlugin/: CMakeLists.txt  FreeFrameMire.cpp  FreeFrameMire.h
FreeFramePlugins/FreeFrameMonteCarloPlugin/: CMakeLists.txt  FreeFrameMonteCarlo.cpp  FreeFrameMonteCarlo.h
FreeFramePlugins/FreeFramePixelationPlugin/: CMakeLists.txt  FreeFramePixelation.cpp  FreeFramePixelation.h
FreeFramePlugins/FreeFrameQtFragmentCodePlugin/: .FreeFrameQtGLSL.cpp.kate-swp  CMakeLists.txt  CodeEditorWidget.ui  FreeFrameQtGLSL.cpp  FreeFrameQtGLSL.h  GLSLCodeEditor.cpp  GLSLCodeEditor.h  GLSLCodeEditorWidget.cpp  GLSLCodeEditorWidget.h  GLSLCodeEditorWidget.ui
FreeFramePlugins/FreeFrameQtScreenCapturePlugin/: CMakeLists.txt  FreeFrameQtScreenCapture.cpp  FreeFrameQtScreenCapture.h
FreeFramePlugins/FreeFrameScatterPlugin/: CMakeLists.txt  FreeFrameScatter.cpp  FreeFrameScatter.h
FreeFramePlugins/FreeFrameShadowPlugin/: CMakeLists.txt  FreeFrameShadow.cpp
FreeFramePlugins/FreeFrameShakePlugin/: CMakeLists.txt  FreeFrameShake.cpp  FreeFrameShake.h
FreeFramePlugins/FreeFrameTestPlugin/: CMakeLists.txt  FreeFrameTest.cpp  FreeFrameTest.def  FreeFrameTest.h
FreeFramePlugins/FreeFrameWavePlugin/: CMakeLists.txt  FreeFrameWave.cpp  FreeFrameWave.def  FreeFrameWave.h
FreeFramePlugins/blackmagicFFGLPlugin/: CMakeLists.txt  blackmagicFFGL.cpp  blackmagicFFGL.h  blackmagicPlayback.cpp  blackmagicPlayback.h
FreeFramePlugins/video4LinuxFFGLPlugin/: CMakeLists.txt  error_image.h  v4lFFGL.cpp  v4lFFGL.h
SharedMemory/: SharedMemoryManager.cpp
SharedMemory/ScreenMix/: CMakeLists.txt  SharedMemoryManager.cpp  SharedMemoryManager.h  main.cpp  screencapture.cpp  screencapture.h
SharedMemory/ScribbleMix/: CMakeLists.txt  SharedMemoryDialog.cpp  scribblearea.cpp
TouchOSC/: GLMixerTablette.touchosc
icons/: Thumbs.db  glmixer.icns
images/: glmixer_splash.xcf
libCUDADecoder/: CMakeLists.txt  ImageGL.cpp  ImageGL.h  NV12ToARGB_drvapi64.ptx  VideoManager.cpp  VideoManager.h  VideoParser.cpp  VideoParser.h  VideoSource.cpp  VideoSource.h  cudaModuleMgr.cpp
libFreeFrameGL/FFGL-SDK-1.5/: CMakeLists.txt
libFreeFrameGL/FFGL-SDK-1.6/: CMakeLists.txt
libOSCPack/: CMakeLists.txt
libQtColorPicker/: CMakeLists.txt  qtcolorpicker.h
libQtProperty/: ButtonEditorFactory.cpp  ButtonEditorFactory.h  ButtonPropertyManager.cpp  ButtonPropertyManager.h  CMakeLists.txt  qtbuttonpropertybrowser.cpp  qteditorfactory.cpp  qteditorfactory.h  qtgroupboxpropertybrowser.cpp  qtpropertybrowser.cpp  qtpropertybrowser.h  qtpropertybrowser.qrc  qtpropertybrowserutils.cpp  qtpropertymanager.cpp  qtpropertymanager.h  qttreepropertybrowser.cpp  qttreepropertybrowser.h
linux/: style.qss  svn2cl.sh  svn2cl.xsl
locals/: trans_cz.ts  trans_fr.ts
osx/: Info.plist  style.qss
shaders/: imageProcessing_fragment.glsl  imageProcessing_fragment_simplified.glsl  imageProcessing_vertex.glsl
shaders/effect/: Bokeh disc.glsl  CRT.glsl  DawnBringer 4bit.glsl  anaglyphic.glsl  bloom.glsl  bloompaint.glsl  chromatic aberation.glsl  cubify.glsl  fisheye.glsl  greenscreen.glsl  kaleidoscope.glsl  noise distortion.glsl  quadmirror.glsl  stripes.glsl  talk.glsl  thermal camera.glsl  vignette.glsl  voronoi.glsl  water flow.glsl  water turbulence.glsl
shaders/source/: baba.glsl  bokeh paralax.glsl  bubble.glsl  cloud.glsl  cloudy sky.glsl  color grid.glsl  (+12 more)
src/: .directory  AlgorithmSelectionDialog.cpp  AlgorithmSelectionDialog.h  AlgorithmSelectionDialog.ui  AlgorithmSource.cpp  AlgorithmSource.h  AxisCursor.cpp  AxisCursor.h  BasketSelectionDialog.cpp  BasketSelectionDialog.h  BasketSelectionDialog.ui  BasketSource.cpp  BasketSource.h  CMakeLists.txt  CUDAVideoFile.cpp  CUDAVideoFile.h  CameraDialog.cpp  CameraDialog.h  CameraDialog.ui  CaptureSource.cpp  CaptureSource.h  CatalogView.cpp  CatalogView.h  CloneSource.cpp  CloneSource.h  CodecManager.cpp  CodecManager.h  Cursor.h  DelayCursor.cpp  DelayCursor.h  FFGLEffectSelectionDialog.cpp  FFGLEffectSelectionDialog.ui  FFGLPluginBrowser.cpp  FFGLPluginBrowser.h  FFGLPluginInstances.cpp  FFGLPluginInstances.h  FFGLPluginSource.cpp  FFGLPluginSource.h  FFGLPluginSourceFactory.cpp  FFGLPluginSourceFactory.h  (+196 more)
win/: README MINGW64.txt  glmixer.rc  style.qss
(+8 files in other folders)
